--- a/src/Huskui.Avalonia/Controls/Flyout.axaml
+++ b/src/Huskui.Avalonia/Controls/Flyout.axaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Thickness x:Key="FlyoutContentMargin">12,8</Thickness>
     <ControlTheme x:Key="{x:Type FlyoutPresenter}"
                   TargetType="FlyoutPresenter">
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -8,6 +9,7 @@
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
         <Setter Property="CornerRadius" Value="{StaticResource SmallCornerRadius}" />
+        <Setter Property="Padding" Value="{StaticResource FlyoutContentMargin}" />
         <Setter Property="ClipToBounds" Value="True" />
         <Setter Property="Template">
             <ControlTemplate>
@@ -23,7 +25,7 @@
                         HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
                         VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}">
                         <ContentPresenter x:Name="PART_ContentPresenter"
-                                          Margin="{TemplateBinding Padding}"
+                                          Padding="{TemplateBinding Padding}"
                                           HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                           VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                           HorizontalContentAlignment="Stretch"
@@ -34,6 +36,10 @@
                 </Border>
             </ControlTemplate>
         </Setter>
+
+        <Style Selector="^.Compact">
+            <Setter Property="Padding" Value="0" />
+        </Style>
     </ControlTheme>
 
     <ControlTheme x:Key="{x:Type MenuFlyoutPresenter}"
