--- a/src/Huskui.Gallery/App.axaml
+++ b/src/Huskui.Gallery/App.axaml
@@ -14,6 +14,6 @@
     </Application.Resources>
 
     <Application.Styles>
-        <husk:HuskuiTheme />
+        <husk:HuskuiTheme Accent="Amber" />
     </Application.Styles>
 </Application>
