fix(ui): 更新弹出菜单的热键和颜色主题
- 将弹出菜单中的`Checkbox`和`Radio`的热键更改为`Shift+C`和`Shift+B`
- 修改`ControlSecondaryForegroundBrush`的颜色值，从`Gray11Color`更改为`Gray10Color`

--- a/src/Huskui.Gallery/Views/PopupsView.axaml
+++ b/src/Huskui.Gallery/Views/PopupsView.axaml
@@ -49,12 +49,12 @@
                             <MenuItem
                                 Icon="{fie:SymbolIcon Symbol=CheckboxChecked,FontSize={StaticResource MediumFontSize}}"
                                 Header="And">
-                                <MenuItem Header="Checkbox" HotKey="F2" ToggleType="CheckBox" />
+                                <MenuItem Header="Checkbox" InputGesture="Shift+C" ToggleType="CheckBox" />
                             </MenuItem>
                             <MenuItem Icon="{fie:SymbolIcon Symbol=Checkbox1,FontSize={StaticResource MediumFontSize}}"
                                       Header="Also">
-                                <MenuItem Header="Radio" HotKey="F3" ToggleType="Radio" IsChecked="True" />
-                                <MenuItem Header="Station" HotKey="F3" ToggleType="Radio" />
+                                <MenuItem Header="Radio" InputGesture="Shift+B" ToggleType="Radio" IsChecked="True" />
+                                <MenuItem Header="Station" InputGesture="F3" ToggleType="Radio" />
                             </MenuItem>
                         </MenuFlyout>
                     </Button.ContextFlyout>
