--- a/src/Huskui.Gallery/MainWindow.axaml
+++ b/src/Huskui.Gallery/MainWindow.axaml
@@ -5,6 +5,7 @@
                 xmlns:husk="https://github.com/d3ara1n/Huskui.Avalonia"
                 xmlns:local="clr-namespace:Huskui.Gallery"
                 xmlns:models="clr-namespace:Huskui.Gallery.Models"
+                xmlns:fi="clr-namespace:FluentIcons.Avalonia;assembly=FluentIcons.Avalonia"
                 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
                 ExtendClientAreaTitleBarHeightHint="44"
                 TransparencyLevelHint="Mica, None"
@@ -14,15 +15,26 @@
         <local:MainWindowContext />
     </husk:AppWindow.DataContext>
     <Grid ColumnDefinitions="Auto,*">
-        <ListBox Grid.Column="0" ItemsSource="{Binding Entries}"
-                 SelectedItem="{Binding SelectedEntry,Mode=OneWayToSource}"
-                 Background="{StaticResource ControlTranslucentHalfBackgroundBrush}">
-            <ListBox.ItemTemplate>
-                <DataTemplate x:DataType="models:EntryModel">
-                    <TextBlock Text="{Binding Display}" />
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+        <Border Grid.Column="0" Background="{StaticResource ControlTranslucentHalfBackgroundBrush}" Padding="12">
+            <Grid RowDefinitions="Auto,*,Auto" RowSpacing="12">
+                <ListBox Grid.Row="1" ItemsSource="{Binding Entries}"
+                         SelectedItem="{Binding SelectedEntry,Mode=OneWayToSource}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate x:DataType="models:EntryModel">
+                            <TextBlock Text="{Binding Display}" />
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <Grid Grid.Row="2" ColumnDefinitions="Auto,*,Auto">
+                    <Button Grid.Column="0">
+                        <fi:SymbolIcon Symbol="Settings" FontSize="{StaticResource MediumFontSize}" />
+                    </Button>
+                    <Button Grid.Column="2">
+                        <fi:SymbolIcon Symbol="Info" FontSize="{StaticResource MediumFontSize}" />
+                    </Button>
+                </Grid>
+            </Grid>
+        </Border>
         <husk:Frame Name="Root" Grid.Column="1" />
     </Grid>
 </husk:AppWindow>
