style(Color): change colors in Dark mode

--- a/src/Huskui.Avalonia/Themes/Controls.axaml
+++ b/src/Huskui.Avalonia/Themes/Controls.axaml
@@ -51,6 +51,8 @@
         <ResourceInclude Source="/Controls/TabStrip.axaml" />
         <ResourceInclude Source="/Controls/Tag.axaml" />
         <ResourceInclude Source="/Controls/TextBox.axaml" />
+        <ResourceInclude Source="/Controls/TimelineControl.axaml" />
+        <ResourceInclude Source="/Controls/TimelineItem.axaml" />
         <ResourceInclude Source="/Controls/TransitioningContentControl.axaml" />
         <ResourceInclude Source="/Controls/Toast.axaml" />
         <ResourceInclude Source="/Controls/ToggleButton.axaml" />
