--- a/src/Huskui.Avalonia/Themes/Colors.axaml
+++ b/src/Huskui.Avalonia/Themes/Colors.axaml
@@ -22,7 +22,6 @@
             <StaticResource x:Key="InteractiveColor" ResourceKey="White7Color" />
             <StaticResource x:Key="SmokeColor" ResourceKey="Black7Color" />
             <StaticResource x:Key="DarkColor" ResourceKey="Gray12Color" />
-            <StaticResource x:Key="BorderColor" ResourceKey="Gray5Color" />
         </ResourceDictionary>
         <ResourceDictionary x:Key="Dark">
             <Color x:Key="TransparentColor">#00000000</Color>
@@ -30,12 +29,11 @@
             <!-- 👆 不准动 👆 -->
 
             <StaticResource x:Key="FlyoutColor" ResourceKey="Gray2Color" />
-            <StaticResource x:Key="LayerColor" ResourceKey="White1Color" />
-            <StaticResource x:Key="CardColor" ResourceKey="White1Color" />
+            <StaticResource x:Key="LayerColor" ResourceKey="Black5Color" />
+            <StaticResource x:Key="CardColor" ResourceKey="Black3Color" />
             <StaticResource x:Key="InteractiveColor" ResourceKey="Black3Color" />
             <StaticResource x:Key="SmokeColor" ResourceKey="Black7Color" />
             <StaticResource x:Key="DarkColor" ResourceKey="Gray1Color" />
-            <StaticResource x:Key="BorderColor" ResourceKey="White4Color" />
         </ResourceDictionary>
     </ResourceDictionary.ThemeDictionaries>
 
@@ -66,7 +64,7 @@
     <!-- Normal：这 ParkUI 这部分的颜色就完全没按 Step 分区来 -->
     <SolidColorBrush x:Key="ControlBackgroundBrush" Color="{DynamicResource Gray7Color}" />
     <SolidColorBrush x:Key="ControlInteractiveBackgroundBrush" Color="{DynamicResource Gray5Color}" />
-    <SolidColorBrush x:Key="ControlBorderBrush" Color="{DynamicResource BorderColor}" />
+    <SolidColorBrush x:Key="ControlBorderBrush" Color="{DynamicResource Gray7Color}" />
     <SolidColorBrush x:Key="ControlInteractiveBorderBrush" Color="{DynamicResource Gray7Color}" />
     <SolidColorBrush x:Key="ControlTranslucentHalfBackgroundBrush" Color="{DynamicResource Gray9Color}" Opacity="0.1" />
     <SolidColorBrush x:Key="ControlTranslucentFullBackgroundBrush" Color="{DynamicResource Gray9Color}" Opacity="0.2" />
