--- a/src/Huskui.Avalonia/Controls/ToolTip.axaml
+++ b/src/Huskui.Avalonia/Controls/ToolTip.axaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Thickness x:Key="ToolTipFillMargin">-12,-8</Thickness>
-    
+
     <ControlTheme x:Key="{x:Type ToolTip}"
                   TargetType="ToolTip">
         <Setter Property="Background" Value="{StaticResource FlyoutBackgroundBrush}" />
@@ -18,8 +18,7 @@
                     <ContentPresenter Name="PART_ContentPresenter"
                                       Padding="{TemplateBinding Padding}"
                                       Content="{TemplateBinding Content}"
-                                      ContentTemplate="{TemplateBinding ContentTemplate}">
-                    </ContentPresenter>
+                                      ContentTemplate="{TemplateBinding ContentTemplate}" />
                 </Border>
             </ControlTemplate>
         </Setter>
