--- a/src/Huskui.Avalonia/HuskuiTheme.axaml
+++ b/src/Huskui.Avalonia/HuskuiTheme.axaml
@@ -4,10 +4,10 @@
     <Styles.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceInclude Source="/Themes/CornerRadius.Normal.axaml" />
                 <ResourceInclude Source="/Themes/Colors.Accent.Neutral.axaml" />
                 <ResourceInclude Source="/Themes/Colors.axaml" />
                 <ResourceInclude Source="/Themes/Basics.axaml" />
-                <ResourceInclude Source="/Themes/CornerRadius.axaml" />
                 <ResourceInclude Source="/Themes/FontSize.axaml" />
                 <ResourceInclude Source="/Themes/Controls.axaml" />
             </ResourceDictionary.MergedDictionaries>
