feat(settings): 添加圆角样式设置功能
- 在`Configuration.cs`中添加`APPLICATION_STYLE_CORNER`常量
- 在`SettingsViewModel.cs`中引入`CornerStyle`属性并更新配置
- 在`SettingsView.axaml`中添加圆角样式的选择项
- 更新`MainWindow.axaml.cs`以支持设置圆角样式
- 在资源文件中添加圆角样式标签的本地化支持

--- a/src/Huskui.Avalonia/Controls/NotificationItem.axaml
+++ b/src/Huskui.Avalonia/Controls/NotificationItem.axaml
@@ -91,7 +91,7 @@
                                     <Grid RowDefinitions="Auto,4,*,4,Auto" ColumnDefinitions="*,Auto"
                                           Margin="{TemplateBinding Padding}">
                                         <Grid Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="0"
-                                              ColumnDefinitions="*,8,Auto">
+                                              ColumnDefinitions="*,Auto" ColumnSpacing="8">
                                             <Grid.IsVisible>
                                                 <MultiBinding Converter="{x:Static BoolConverters.Or}">
                                                     <Binding Path="Title"
@@ -104,7 +104,8 @@
                                             <TextBlock Grid.Column="0" Text="{TemplateBinding Title}"
                                                        FontWeight="{StaticResource ControlStrongFontWeight}"
                                                        TextTrimming="CharacterEllipsis" />
-                                            <Button Grid.Column="2" Padding="6" CornerRadius="10"
+                                            <Button Grid.Column="1" Padding="6"
+                                                    CornerRadius="{StaticResource FullCornerRadius}"
                                                     Theme="{StaticResource OutlineButtonTheme}"
                                                     DockPanel.Dock="Right" IsEnabled="{TemplateBinding IsOpen}"
                                                     Command="{Binding Close,RelativeSource={RelativeSource Mode=TemplatedParent}}"
