--- a/src/Huskui.Avalonia/Controls/CheckBox.axaml
+++ b/src/Huskui.Avalonia/Controls/CheckBox.axaml
@@ -51,7 +51,7 @@
                             </Transitions>
                         </Border.Transitions>
                         <Panel>
-                            <Border Name="Indicator" CornerRadius="{TemplateBinding CornerRadius}"
+                            <Border Name="Indicator" CornerRadius="{StaticResource ExtraSmallCornerRadius}"
                                     Margin="2" RenderTransform="scale(0.0)"
                                     Background="{StaticResource OverlaySolidBackgroundBrush}">
                                 <Border.Transitions>
