--- a/src/Huskui.Gallery/Themes/Gallery.axaml
+++ b/src/Huskui.Gallery/Themes/Gallery.axaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceInclude Source="/Controls/ControlPresenter.axaml" />
+        <ResourceInclude Source="/Themes/ExampleContainer.axaml" />
+        <ResourceInclude Source="/Themes/CodeViewer.axaml" />
+        <ResourceInclude Source="/Themes/ThemeSelector.axaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
